# udsbot

./: .gitignore  Makefile  README.md  bot.py  commands.py  config.py  config.yaml  cronjob.py  cronjob_config.py  joke.py  joyo_final.json  jp_dict.py  jp_podcast.py  kanji.json  llm.py  message.json  mytypes.py  pyproject.toml  requirements.txt  sample.py  test_cronjob.py
.github/workflows/: python-quality-checks.yml
