[project]
name = "udsbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml[html-clean]>=5.3.2",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
    "uds",
]

[tool.uv.sources]
uds = { git = "https://github.com/hvnsweeting/uds", rev = "master" }
